# md2

./: .gitignore  CHANGES.md  CLEANUP_PLAN.md  Dockerfile  LICENSE  PAGE_NUMBERS_STATUS.md  README.md  TOC_PAGE_NUMBERS_PLAN.md  demo.html  demo.md  pyproject.toml  test_multi_h1.docx  test_multi_h1.md  test_pagebreak.html  test_sizing.html
.architect/: rules.md
baseline_outputs/: doc.docx  doc.html
docker/: md2html.sh  package.json  pdf_generator.sh  pdf_processor.py  print.js
docker/filters/: back_to_toc.lua  mermaid.lua
docs/copilot/features/letter-window-envelope-mode/: audit.md  plan.md  review.md
examples/: .~lock.doc.docx#  doc.docx  doc.md  emoji.md  example.sh  external-css.md  external-css.sh  math-repro.md  math-repro.sh  mermaid_auto_layout.md  pseudo_headings.md  test_actual_bug.md  test_comprehensive.md  test_label_value.md  test_linebreak.md  test_pseudo_bug.md  test_pseudo_bug2.md  toc_min.md
filters/: mermaid.lua
scripts/: mermaid
src/md2/: Dockerfile  __init__.py  cli.py  conversion.py  html_postprocess.py  pdf_editor.py  pdf_parser.py  runtime.py  toc_postprocess.py
src/md2/filters/: mermaid.lua  toc_unlist_h1.lua
src/md2/scripts/: html_body_classes.py  html_postprocess.py  letter_preprocess.py  md2docx.sh  md2html.sh  package.json  pdf_generator.sh  pdf_processor.py  preprocess_md.py  print.js  validate_images.py
src/md2/styles/: default.css  default.toc.css  reference.docx
src/md_html_pdf/: __init__.py  cli.py  conversion.py  runtime.py
src/tests/md2/: test_conversion.py  test_html_body_classes.py  test_letter_preprocess.py  test_page_numbers.py  test_preprocess.py  test_runtime.py  test_toc_page_numbers.py
src/tests/md_html_pdf/: test_conversion.py  test_runtime.py
src/tmp_tests/: test_container_image_validation.py  test_image_path_rewrite.py  test_rebuild.py  test_rebuild_integration.py  test_windows_compat.py
styles/: default.css  default.toc.css  toc-page-numbers.css
