[project]
name = "md2"
version = "0.7.0"
description = "Markdown -> HTML -> PDF via Podman/Docker (pandoc+mermaid+mathjax+puppeteer)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ralf Schneider" }]
dependencies = [
    "aimport==2.1.0",
    "pymupdf>=1.26.4",
    "pytest-timeout==2.4.0",
]

[project.scripts]
md2html = "md2.cli:main_md2html"
md2pdf = "md2.cli:main_md2pdf"
html2pdf = "md2.cli:main_html2pdf"
md2docx = "md2.cli:main_md2docx"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q --timeout=10"
testpaths = ["src/tests/md2"]
