[project]
name = "md2"
version = "0.8.2"
description = "Markdown -> HTML -> PDF via Podman/Docker (pandoc+mermaid+mathjax+puppeteer)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Ralf Schneider" }]
dependencies = []

[project.scripts]
md2html = "md2.cli:main_md2html"
md2pdf = "md2.cli:main_md2pdf"
html2pdf = "md2.cli:main_html2pdf"
md2docx = "md2.cli:main_md2docx"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
md2 = ["Dockerfile", "filters/*", "scripts/*", "styles/*"]


[tool.pytest.ini_options]
addopts = "-q --timeout=10"
testpaths = ["src/tests/md2"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-timeout>=2.4.0",
]
